# fastmcp_rust

./: .gitignore  AGENTS.md  Cargo.toml  FEATURE_PARITY.md  LICENSE-APACHE  README.md  RICH_RUST_INTEGRATION_PLAN.md  repro_markup.rs
.beads/: beads.db  issues.jsonl  last-touched
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/fastmcp/: Cargo.toml
crates/fastmcp-cli/: Cargo.toml
crates/fastmcp-cli/src/: main.rs
crates/fastmcp-cli/tests/: e2e_cli.rs
crates/fastmcp-client/: Cargo.toml
crates/fastmcp-client/src/: builder.rs  lib.rs  mcp_config.rs  session.rs
crates/fastmcp-console/: Cargo.toml  README.md
crates/fastmcp-console/examples/: tables.rs  test_server.rs
crates/fastmcp-console/src/: banner.rs  client.rs  config.rs  console.rs  detection.rs  diagnostics.rs  handlers.rs  lib.rs  logging.rs  status.rs  tables.rs  theme.rs
crates/fastmcp-console/src/client/: traffic.rs
crates/fastmcp-console/src/error/: boundary.rs  mod.rs
crates/fastmcp-console/src/logging/: formatter.rs  logger.rs  mod.rs  subscriber.rs
crates/fastmcp-console/src/stats/: mod.rs
crates/fastmcp-console/src/testing/: mod.rs  snapshots.rs  test_console.rs
crates/fastmcp-console/tests/: integration.rs
crates/fastmcp-console/tests/e2e/: agent_mode.rs  configuration.rs  helpers.rs  human_mode.rs  mod.rs  server_lifecycle.rs
crates/fastmcp-core/: Cargo.toml
crates/fastmcp-core/src/: auth.rs  combinator.rs  context.rs  duration.rs  error.rs  lib.rs  logging.rs  runtime.rs  state.rs
crates/fastmcp-macros/: Cargo.toml
crates/fastmcp-macros/src/: lib.rs
crates/fastmcp-protocol/: Cargo.toml
crates/fastmcp-protocol/src/: jsonrpc.rs  lib.rs  messages.rs  schema.rs  types.rs
crates/fastmcp-server/: Cargo.toml
crates/fastmcp-server/src/: auth.rs  bidirectional.rs  builder.rs  caching.rs  docket.rs  handler.rs  lib.rs  middleware.rs  oauth.rs  oidc.rs  proxy.rs  rate_limiting.rs  router.rs  session.rs  tasks.rs  tests.rs  transform.rs
crates/fastmcp-server/src/providers/: filesystem.rs  mod.rs
crates/fastmcp-transport/: Cargo.toml
crates/fastmcp-transport/src/: async_io.rs  codec.rs  event_store.rs  http.rs  lib.rs  memory.rs  sse.rs  stdio.rs  websocket.rs
crates/fastmcp/examples/: bench.rs  calculator_server.rs  echo_server.rs  notes_server.rs  weather_server.rs
crates/fastmcp/src/: lib.rs
crates/fastmcp/src/testing/: assertions.rs  client.rs  mod.rs  (+4 more)
crates/fastmcp/tests/: e2e_workflow.rs  macro_expansion.rs
(+1 files in other folders)
