[package]
name = "fastmcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types and context for FastMCP"

[dependencies]
asupersync.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true

[lints]
workspace = true
