[package]
name = "fastmcp-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Procedural macros for FastMCP (#[tool], #[resource], #[prompt])"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }

[lints]
workspace = true
